Update index and add test_regen

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <main>
         <p>這是我的專案</p>
         <ul>
-            <li><a href="建物.html">查看停車資訊</a></li>
+            <li><a href="test_regen.html">查看停車資訊</a></li>
             <!-- 其他頁面鏈接 -->
         </ul>
     </main>
